...
    public required init?(coder aDecoder: NSCoder) {
        fatalError("init(coder:) has not been implemented")
    }

    private func configureNavigationItem() {
        let cancelAction = #selector(didTap(cancelBarButtonItem:))
        let cancelButton = UIBarButtonItem(title: "Cancel", style: .done, target: self, action: cancelAction)
        navigationItem.leftBarButtonItem = cancelButton

        let saveAction = #selector(didTap(saveBarButtonItem:))
        let saveButton = UIBarButtonItem(title: "Save", style: .done, target: self, action: saveAction)
        navigationItem.rightBarButtonItem = saveButton
    }

    private func configureView() {
        titleTextField.text = viewModel.title
        bodyTextView.text = viewModel.body
...
