//
//  Copyright © 2017 SwiftCoders. All rights reserved.
//

import UIKit

final class AddItemViewController: EditItemViewController {
    override func viewDidLoad() {
        super.viewDidLoad()

        navigationItem.title = "Add Item"
    }
}
