...
        NSLayoutConstraint.activate(constraints)
    }

    private func configureBodyLabel() {
        containerView.addSubview(bodyLabel)
        bodyLabel.numberOfLines = 0
        bodyLabel.accessibilityLabel = "Body"
        bodyLabel.translatesAutoresizingMaskIntoConstraints = false

        let constraints: [NSLayoutConstraint] = [
            bodyLabel.leadingAnchor.constraint(equalTo: containerView.leadingAnchor, constant: 10),
            bodyLabel.trailingAnchor.constraint(equalTo: containerView.trailingAnchor, constant: -10),
            bodyLabel.topAnchor.constraint(equalTo: containerView.topAnchor, constant: 10),
...
